--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -7,6 +7,7 @@ vsync = true;
 opacity-rule = [
     "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
+
 # Blur settings
 blur-method = "dual_kawase";
 blur-strength = 5;
@@ -14,3 +15,7 @@ blur-background-exclude = [
     "window_type = 'dock'",
     "window_type = 'desktop'"
 ];
+
+
+# esquinas redondeadas 
+cornet-radius = 10;
