--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -19,3 +19,9 @@ blur-background-exclude = [
 
 # esquinas redondeadas 
 cornet-radius = 10;
+shadow = true;
+shadow-radius = 10;
+shadow-opacity = 0.8;
+shadow-offset-x = -10;
+shadow-offset-y = -10;
+
