refactor finish and update

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -18,6 +18,7 @@ blur-background-exclude = [
 
 
 # esquinas redondeadas 
+round-borders = true;
 cornet-radius = 10;
 shadow = true;
 shadow-radius = 10;
