--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -9,20 +9,26 @@ opacity-rule = [
 ];
 
 # Blur settings
-blur-method = "dual_kawase";
-blur-strength = 5;
+blur: {
+  method = "dual_kawase";
+  strength = 5;
+  background = true;
+  background-frame = true;
+  background-fixed = true;
+}
 blur-background-exclude = [
-    "window_type = 'dock'",
     "window_type = 'desktop'"
 ];
 
 
 # esquinas redondeadas 
-round-borders = true;
-cornet-radius = 10;
-shadow = true;
-shadow-radius = 10;
-shadow-opacity = 0.8;
-shadow-offset-x = -10;
-shadow-offset-y = -10;
+# corner-radius = 8.0;
+# detect-rounded-corners = true;
+# rounded-corners-exclude = [
+  # "window_type = 'menu'",
+  # "window_type = 'dropdown_menu'",
+  # "window_type = 'popup_menu'",
+  # "window_type = 'utility'",
+  # "class_g = 'Polybar'",
+# ];
 
