--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -22,13 +22,24 @@ blur-background-exclude = [
 
 
 # esquinas redondeadas 
-# corner-radius = 8.0;
-# detect-rounded-corners = true;
-# rounded-corners-exclude = [
-  # "window_type = 'menu'",
-  # "window_type = 'dropdown_menu'",
-  # "window_type = 'popup_menu'",
-  # "window_type = 'utility'",
-  # "class_g = 'Polybar'",
-# ];
+corner-radius = 10.0;
+detect-rounded-corners = true;
+rounded-corners-exclude = [
+  "! name~=''",
+  "window_type = 'dock'",
+	"class_g = 'Dunst'",
+	"class_g = 'mpv'",
+	"window_type = 'desktop'"
+];
 
+
+#fadings
+fading = true;
+fade-in-step = 0.09;
+fade-out-step = 0.09;
+frame-opacity = 1.0;
+
+#sombras
+shadow = true;
+shadow-radius = 20
+shadow-opacity = 0.8 
