--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -23,13 +23,12 @@ blur-background-exclude = [
 
 # esquinas redondeadas 
 corner-radius = 10.0;
-detect-rounded-corners = true;
+detect-rounded-corners = false;
 rounded-corners-exclude = [
-  "! name~=''",
+  "! name~=''", # qtile bar
   "window_type = 'dock'",
 	"class_g = 'Dunst'",
-	"class_g = 'mpv'",
-	"window_type = 'desktop'"
+  "class_g = 'Rofi'",
 ];
 
 
@@ -42,4 +41,4 @@ frame-opacity = 1.0;
 #sombras
 shadow = true;
 shadow-radius = 18
-shadow-opacity = 0.9 
+shadow-opacity = 0.9
