--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -5,7 +5,8 @@ glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
 vsync = true;
 opacity-rule = [
-    "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+    "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+    "95:class_g = 'Spotify'"
 ];
 
 # Blur settings
@@ -23,7 +24,8 @@ blur-background-exclude = [
 
 # esquinas redondeadas 
 corner-radius = 10.0;
-detect-rounded-corners = false;
+round-borders = 1;  #https://www.reddit.com/r/qtile/comments/y29zle/picom_rounded_corners/
+detect-rounded-corners = true;
 rounded-corners-exclude = [
   "! name~=''", # qtile bar
   "window_type = 'dock'",
