--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -18,7 +18,11 @@ blur: {
   background-fixed = true;
 }
 blur-background-exclude = [
-    "window_type = 'desktop'"
+	"window_type = 'menu'",
+    "window_type = 'desktop'",
+     "window_type = 'dock'",
+     "class_g = 'Plank'",
+     "_GTK_FRAME_EXTENTS@:c"
 ];
 
 
@@ -44,3 +48,9 @@ frame-opacity = 1.0;
 shadow = true;
 shadow-radius = 18
 shadow-opacity = 0.9
+shadow-exclude = [    
+	"window_type = 'menu'",
+	"name *= 'Dropdown'",
+	"name *= 'Tooltip'",
+	"_GTK_FRAME_EXTENTS@:c"
+];
