--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,6 +8,7 @@ font_italic JetBrains Nerd Italic
 
 #: My kitty aparience customization 
 
+enable_audio_bell no
 background_opacity 0.8
 background_blur 10
 map ctrl+shift+t new_tab_with_cwd
