--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -22,7 +22,8 @@ blur-background-exclude = [
     "window_type = 'desktop'",
      "window_type = 'dock'",
      "class_g = 'Plank'",
-     "_GTK_FRAME_EXTENTS@:c"
+     "_GTK_FRAME_EXTENTS@:c",
+      "class_g ?= 'zoom'",
 ];
 
 
@@ -52,5 +53,7 @@ shadow-exclude = [
 	"window_type = 'menu'",
 	"name *= 'Dropdown'",
 	"name *= 'Tooltip'",
-	"_GTK_FRAME_EXTENTS@:c"
+	"_GTK_FRAME_EXTENTS@:c",
+  "name = 'cpt_frame_xcb_window'",
+  "class_g ?= 'zoom'",
 ];
